--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MTG Card Consulting</title>
         <link data-trunk rel="css" href="style.css" />
+        <link data-trunk rel="copy-file" href="princess.jpg" />
+        <link data-trunk rel="copy-file" href="masterskywalker.jpg" />
     </head>
     <body></body>
 </html>
